--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 PROJECT
 -------
 
-CL-URI-TEMPLATES aims to be a extensive Common-Lisp implementation
-of the URI-Templates draft proposed to the W3C and already showing
-increased use across the web.
+CL-URI-TEMPLATES is an extensive Common-Lisp implementation
+of the URI-Templates draft proposed to the W3C.
 
 It is currently developped by Thomas de Grivel <billitch@gmail.com>
 at http://github.com/billitch/cl-uri-templates .
@@ -12,9 +11,13 @@ at http://github.com/billitch/cl-uri-templates .
 PROGRESS
 --------
 
-All expansions, operators and variable substitution work fine.
-Destructuring URIs using operators is under development.
+Standard is fully implemented. Templates can be parsed at run-time,
+expansion of URIs with variables and operators is fully supported.
 
+Beyond standard, destructuring URIs works with simple variables,
+destructuring templates using operators is under development.
+
+Provided tests should all pass, thay are run with test.sh or test.lisp .
 Please report any bug you encounter, test cases and patches are also
 highly appreciated.
 
@@ -26,17 +29,20 @@ This implementation is based on the URI-Templates draft proposed by
 Joe Gregorio to the W3C. You can get it from the project page at
 http://bitworking.org/projects/URI-Templates/
 
+
+HISTORY
+-------
+
+This package is originally a fork from uri-template from Vladimir Sedach.
+
+My goal was to contribute the missing operator parsers, and
+further extend the URI deconstruction with these same operators.
+
+Moreover run-time parsing and processing of URI was added,
+previous code would only allow uri-templates as a reader macro.
+
 For more information about the original uri-template package by
 Vladimir Sedach, see http://common-lisp.net/project/uri-template/ .
-
-
-FORK
-----
-
-This package is a fork from uri-template written by Vladimir Sedach.
-
-My goal is to contribute the missing operator parsers, and
-further extend the URI deconstruction with these same operators.
 
 
 LICENSE
