Compliant run-time URI Templates expansions.

--- a/README
+++ b/README
@@ -8,16 +8,40 @@ It is currently developped by Thomas de Grivel <billitch@gmail.com>
 at http://github.com/billitch/cl-uri-templates .
 
 
+USAGE
+-----
+
+If you want simple expansion of a template string using the current
+lexical environment, use EXPAND-URI-TEMPLATE.
+
+There is also a reader macro parsing forms like #U{foo}/{bar} which
+you can enable with ENABLE-URI-TEMPLATE-SYNTAX.
+
+
+Destructuring URIs according to a template is provided by
+WITH-DESTRUCTURED-URI, or if you want more persistent variables you
+can bind *URI-ENVIRONMENT* and use DESTRUCTURE-URI to populate it.
+
+
+When writing URI templates please note that some expansions do not
+have reciprocal deconstructions, for instance
+
+ (equal '("" "foobar")
+        (with-destructured-uri "foobar" "{foo}{bar}" (foo bar)
+           (list foo bar)))
+
+
 PROGRESS
 --------
 
-Standard is fully implemented. Templates can be parsed at run-time,
-expansion of URIs with variables and operators is fully supported.
+Standard (draft) is fully implemented. Templates can be parsed at
+run-time, expansion of URIs with variables and operators is fully
+supported.
 
 Beyond standard, destructuring URIs works with simple variables,
 destructuring templates using operators is under development.
 
-Provided tests should all pass, thay are run with test.sh or test.lisp .
+Provided tests should all pass, thay are run with test.sh or test.lisp
 Please report any bug you encounter, test cases and patches are also
 highly appreciated.
 
@@ -35,11 +59,11 @@ HISTORY
 
 This package is originally a fork from uri-template from Vladimir Sedach.
 
-My goal was to contribute the missing operator parsers, and
+Goal was to contribute the missing operator parsers, and
 further extend the URI deconstruction with these same operators.
 
-Moreover run-time parsing and processing of URI was added,
-previous code would only allow uri-templates as a reader macro.
+Moreover run-time destructuring of URI was added, previous code
+would only allow uri-templates as a reader macro.
 
 For more information about the original uri-template package by
 Vladimir Sedach, see http://common-lisp.net/project/uri-template/ .
